--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -1,4 +1,25 @@
+//primary colors
+$soft-red: hsl(7, 99%, 70%);
+$yellow: hsl(51, 100%, 49%);
+$dk-cyan-gdtext: hsl(167, 40%, 24%);
+$dk-blue-phototext: hsl(198, 62%, 26%);
+$dk-cyan-footer: hsl(168, 34%, 41%);
+
+//neutral colors
+$dk-blue: hsl(212, 27%, 19%);
+$v-dk-gray-blue:hsl(213, 9%, 39%);
+$dk-gray-blue: hsl(232, 10%, 55%);
+$gray-blue: hsl(210, 4%, 67%);
+$white:#fff;
+
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap');
+
+// font-family: 'Barlow', sans-serif;
+// font-family: 'Fraunces', serif;
+
 * {
     margin:0;
     padding: 0;
+    box-sizing: border-box;
 }
+
