--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,2 +1,114 @@
 @import 'utilities';
 @import 'responsive';
+
+.wrapper {
+    font-family: 'Barlow', sans-serif;
+
+    .header {
+        display: flex;
+        flex-direction: column;
+        width:100%;
+        max-height: 400px;
+        overflow: hidden;
+        background: url(/dist/images/desktop/image-header.jpg) no-repeat center center/cover;
+    }
+
+    .content {
+
+        .row {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            width: 100%;
+
+            .column {
+                display: flex;
+                flex-direction: column;
+                flex-basis: 100%;
+                flex: 1;
+            }
+
+            .left {
+                background-color: green;
+                height: 300px;
+            }
+
+            .right {
+                background-color: blue;
+                height: 300px;
+            }
+        }
+    }
+}
+
+
+
+
+
+// .wrapper {
+
+//     .showcase {
+//         display: flex;
+//         flex-direction: column;
+//         font-family: 'Fraunces', serif;
+
+//         h1 {
+//             text-align: center;
+//             z-index: 2;
+//             color: $white;
+//             letter-spacing: 5px;
+//             font-weight: 600;
+//         }
+
+//         img {
+//             width: 100%;
+//             z-index: 0;
+//             position: absolute;
+//             top:10;
+//             height: 400px;
+            
+//         }
+
+//         nav {
+//             font-family: 'Barlow', sans-serif;
+//             z-index: 2;
+//             height: 100px;
+//             margin-top: 30px;
+//             margin-right: 20px;
+    
+//             ul {
+//                 display: flex;
+//                 justify-content: flex-end;
+    
+//                 li {
+//                     margin: 0 10px;
+//                     list-style: none;
+//                     font-size: 16px;
+    
+//                     a {
+//                         text-decoration: none;
+//                         color: $white;
+//                     }
+//                 }
+//             }
+//         }
+//     }
+
+//     .grid {
+//         display: flex;
+//         flex-direction: row;
+//         align-items: center;
+//         justify-content: center;
+//         background-color: pink;
+//         height: 100vh;
+//         .box {
+            
+//             background: #f4f4f4;
+//             border: #ccc solid 2px;
+//             margin: 10px;
+//             padding: 10px;
+//             text-align: center;
+//             border-radius: 10px;
+//         }
+//     }
+// }
