--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,12 +9,38 @@
         display: flex;
         flex-direction: column;
         width:100%;
-        max-height: 400px;
+        height: 80vh;
         overflow: hidden;
         background: url(/dist/images/desktop/image-header.jpg) no-repeat center center/cover;
-    }
 
-    // NAV
+        h1 {
+            font-family: 'Fraunces', serif;
+            color: $white;
+            text-align: center;
+            margin-top: 80px;
+            letter-spacing: 7px;
+        }
+
+        // NAV
+        nav {
+            ul {
+                display: flex;
+                justify-content: flex-end;
+
+                li { 
+                    list-style-type: none;
+                    margin-top: 20px;
+                }
+
+                a {
+                    text-decoration: none;
+                    margin: 0 30px;
+                    color: $white;
+                    font-size: 15px;
+                }
+            }
+        }
+    }
 
     // CONTENT GRID
     .content {
