--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,7 +9,7 @@
         display: flex;
         flex-direction: column;
         width:100%;
-        height: 80vh;
+        height: 65vh;
         overflow: hidden;
         background: url(/dist/images/desktop/image-header.jpg) no-repeat center center/cover;
 
@@ -70,11 +70,11 @@
             }
 
             .left {
-                height: 450px;
+                height: 500px;
             }
 
             .right {
-                height: 450px;
+                height: 500px;
             }
 
             .egg {
@@ -87,10 +87,34 @@
 
             .cherry {
                 background: url(/dist/images/desktop/image-graphic-design.jpg) no-repeat center center/cover;
+
+                h3, p {
+                    text-align: center;
+                }
+
+                h3 {
+                    padding-top: 220px;
+                }
+
+                p {
+                    padding-top: 20px;
+                }
             }
 
             .orange {
                 background: url(/dist/images/desktop/image-photography.jpg) no-repeat center center/cover;
+
+                h3, p {
+                    text-align: center;
+                }
+
+                h3 {
+                    padding-top: 220px;
+                }
+
+                p {
+                    padding-top: 20px;
+                }
             }
         }
     }
@@ -120,7 +144,6 @@
         .row-img {
             display: flex;
             flex-direction: row;
-            // flex-wrap: wrap;
             width: 100%;
             justify-content: center;
 
