--- a/scss/main.scss
+++ b/scss/main.scss
@@ -38,6 +38,19 @@
                     color: $white;
                     font-size: 15px;
                 }
+
+                .current {
+                    font-family: 'Fraunces', serif;
+                    color: black; 
+                    text-transform: uppercase;
+                    background-color: $white;
+                    padding: 15px 25px;
+                    border-radius: 40px;
+                }
+            }
+
+            img {
+                background-color: blue;
             }
         }
     }
@@ -90,6 +103,7 @@
 
                 h3, p {
                     text-align: center;
+                    color: $dk-cyan-gdtext;
                 }
 
                 h3 {
@@ -106,6 +120,7 @@
 
                 h3, p {
                     text-align: center;
+                    color:$dk-blue-phototext;
                 }
 
                 h3 {
@@ -120,9 +135,15 @@
     }
 
     // TESTIMONIALS
-
     .testimonals {
 
+        .client {
+                text-align: center;
+                font-family: 'Fraunces', serif;
+                color: $gray-blue;
+                letter-spacing: 4px;
+                margin-top: 90px;
+            }
         .row {
             display: flex;
             flex-direction: row;
@@ -133,10 +154,42 @@
                 flex-direction: column;
                 flex-basis: 100%;
                 flex: 1;
-                height: 400px;
+                height: 500px;
+                justify-content: center;
+                align-items: center;
+                padding: 60px;
             }
+
+            img {
+                width:60px;
+                height: auto;
+                border-radius: 50%;
+                margin-bottom: 50px;
+            }
+
+            h4, p {
+                text-align: center;
+            }
+
+            .quote {
+                font-size: 15px;
+                line-height: 1.6;
+                margin-bottom: 30px;
+                color: $v-dk-gray-blue;
+            }
+
+            .name {
+                font-family: 'Fraunces', serif;
+                font-size: 15px;
+                margin-bottom: 10px;
+            }
+
+            .title {
+                font-size:12px;
+                color:$gray-blue;
         }
     }
+}
 
     // CONTENT SMALL IMAGES
     .content-small {
@@ -148,8 +201,8 @@
             justify-content: center;
 
             .content-img {
-                height: 300px;
-                width: 300px;
+                height: 400px;
+                width: 400px;
             }
 
             .milk {
@@ -171,10 +224,6 @@
     }
 
     // FOOTER
-
-
-
-
 
 
 }
