--- a/scss/main.scss
+++ b/scss/main.scss
@@ -236,5 +236,32 @@
 
     // FOOTER
 
+    .footer {
+        height: 250px;
+        background-color: lighten($dk-cyan-footer, 30%);
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
 
+        .footer-wrap {
+            text-align: center;
+            padding:10px;
+
+          a {
+            color: $dk-cyan-footer;
+            text-decoration: none;
+            font-size: 16px;
+            margin: 0 30px;
+          }
+
+          .logo-footer {
+            margin: 20px 0;
+          }
+
+          .icon {
+            margin: 40px 10px;
+          }
+        }
+    }
 }
