well shoot that didnt work

--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,19 +1,7 @@
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 600px) {
 
     .wrapper {
         display: flex;
         flex-direction: column;
-
-        .content-img{
-            display: flex;
-            // flex-direction: column;
-            // flex-wrap: 1;
-            // flex:auto;
-            min-height: 100px;
-        }
-        
-        .testimonals {
-            
-        }
     }
 }
